Port pre-jdk-11 code to jdk-11